service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  type: LoadBalancer
  selector:
    app: wisecow
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
